--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,30 @@
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
   .pg1-s1-approach {
+    position: relative;
     padding-top: 2.5rem;
     padding-bottom: var(--padd-60-100);
+  }
+
+  .ufo-decorative-svg {
+    display: none;
+    position: absolute;
+    width: 3rem;
+    animation: ufoFly 25s 15s ease-in-out infinite;
+    position: absolute;
+    top: 10%;
+    left: -25%;
+    z-index: -1;
+
+    @media (width > 62.5rem) {
+      width: 5rem;
+      top: 20%;
+      left: -7%;
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+      animation: none;
+    }
   }
 
   .pg1-s1-approach__flex {
@@ -25,7 +47,7 @@
     flex-direction: column;
     gap: 6rem;
 
-    @media (width > 999px) {
+    @media (width > 62.43rem) {
       flex-direction: row;
     }
   }
@@ -38,17 +60,17 @@
     display: grid;
     gap: clamp(1rem, 4vw, 2.5rem);
 
-    @media (width > 760px) {
+    @media (width > 47.5rem) {
       grid-template-columns: 1fr 1fr;
     }
 
-    @media (width > 999px) {
+    @media (width > 62.43rem) {
       max-width: 48%;
     }
   }
 
   .text-block-container__main-text {
-    @media (width > 760px) {
+    @media (width > 47.5rem) {
       grid-column: 1 / -1;
     }
   }
@@ -126,18 +148,18 @@
     display: none;
     position: absolute;
     fill: var(--clr-blue-200);
-    right: -350px;
-    top: -30px;
-    width: 400px;
+    right: -21.87rem;
+    top: -1.87rem;
+    width: 25rem;
     opacity: 0.15;
     animation: slideDiagonal 30s ease-in-out infinite;
 
-    @media (width > 760px) {
+    @media (width > 47.5rem) {
       display: initial;
     }
 
-    @media (width > 1260px) {
-      right: -250px;
+    @media (width > 78.75rem) {
+      right: -15.62rem;
     }
 
     @media (prefers-reduced-motion: reduce) {
@@ -151,7 +173,7 @@
     text-align: center;
     margin-inline: auto;
 
-    @media (width > 760px) {
+    @media (width > 47.5rem) {
       text-align: left;
     }
   }
@@ -160,7 +182,7 @@
     max-width: 22ch;
     margin-inline: auto;
 
-    @media (width > 760px) {
+    @media (width > 47.5rem) {
       margin-inline: unset;
     }
   }
@@ -175,11 +197,11 @@
     gap: 4.5rem;
     margin-top: clamp(6.5rem, 12vw, 7.5rem);
 
-    @media (width > 760px) {
+    @media (width > 47.5rem) {
       grid-template-columns: 1fr 1fr;
     }
 
-    @media (width > 1000px) {
+    @media (width > 62.5rem) {
       grid-template-columns: 1fr 1fr 1fr;
     }
   }
@@ -195,11 +217,11 @@
 
     .services-card__svg-box {
       position: absolute;
-      height: 85px;
-      width: 85px;
+      height: 5.31rem;
+      width: 5.31rem;
       background-color: var(--clr-blue-200);
-      top: -45px;
-      left: 40px;
+      top: -2.81rem;
+      left: 2.5rem;
       border-radius: 1rem;
       display: grid;
       place-items: center;
@@ -232,7 +254,7 @@
 
     &:hover {
       background-color: var(--clr-blue-200);
-      transform: translateX(-10px);
+      transform: translateX(-0.62rem);
       transition: transform 0.5, background-color 5s;
 
       .services-card__svg-box {
@@ -278,7 +300,7 @@
     flex-direction: column;
     gap: clamp(3rem, 6vw, 4rem);
 
-    @media (width > 760px) {
+    @media (width > 47.5rem) {
       flex-direction: row;
     }
   }
@@ -311,13 +333,13 @@
     gap: 2rem;
     margin-bottom: 1.5rem;
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-6.25rem);
     transition: opacity 1.2s ease-out, transform 1.2s ease-out;
     /* prettier-ignore */
     transition-timing-function: linear(0, 0.207 4.4%, 0.388 8.8%, 0.548 13.3%, 0.688 17.9%, 0.749 20.2%, 0.807 22.6%, 0.859 25%, 0.908 27.5%, 0.951 30%, 0.989 32.5%, 1.022 35.1%, 1.051 37.7%, 1.072 40%, 1.09 42.3%, 1.104 44.7%, 1.116 47.2%, 1.124 49.7%, 1.129 52.3%, 1.132 54.9%, 1.131 57.7%, 1.123 62.4%, 1.108 67.7%, 1.088 72.7%, 1.038 84.3%, 1.017 90%, 1.004 95.2%, 1.001 97.6%, 1);
 
     svg {
-      min-width: 40px;
+      min-width: 2.5rem;
     }
 
     svg:not(.mid-svg) {
@@ -328,11 +350,11 @@
       font-size: clamp(0.875rem, 1.5vw, 1rem);
       font-weight: 700;
       color: var(--text-body-white);
-      max-width: 420px;
+      max-width: 26.25rem;
     }
 
-    @media (width > 760px) {
-      transform: translateX(-250px);
+    @media (width > 47.5rem) {
+      transform: translateX(-15.625rem);
     }
 
     @media (prefers-reduced-motion: reduce) {
@@ -347,7 +369,7 @@
   }
 
   .cmp-main-btn--pg1-s3 {
-    margin-top: 1rem;
+    margin-top: 2rem;
     margin-right: auto;
   }
 
@@ -363,7 +385,7 @@
       z-index: 999;
     }
 
-    @media (width > 760px) {
+    @media (width > 47.5rem) {
       max-width: 50%;
     }
   }
@@ -388,7 +410,7 @@
     @media (prefers-reduced-motion: reduce) {
       .slider {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(18.75rem, 1fr));
       }
 
       a {
@@ -408,7 +430,7 @@
     .banner {
       position: relative;
       width: 100%;
-      height: clamp(325px, 60vw, 700px);
+      height: clamp(20.31rem, 60vw, 43.75rem);
       margin-top: 8rem;
       margin-bottom: -8rem;
       text-align: center;
@@ -416,8 +438,8 @@
 
       .slider {
         position: absolute;
-        width: clamp(175px, 35vw, 300px);
-        left: calc(50% - clamp(87.5px, 17.5vw, 150px));
+        width: clamp(10.94rem, 35vw, 18.75rem);
+        left: calc(50% - clamp(5.47rem, 17.5vw, 9.37rem));
         will-change: transform;
 
         transform: translateZ(0);
@@ -432,12 +454,12 @@
           transform: rotateY(
               calc((var(--position) - 1) * (360 / var(--quantity)) * 1deg)
             )
-            translateZ(clamp(70px, 35vw, 400px));
+            translateZ(clamp(4.37rem, 35vw, 25rem));
 
           &::after {
             content: "";
             display: block;
-            height: 4px;
+            height: 0.25rem;
             box-shadow: 25px -25px 20px #000;
             width: 85%;
           }
@@ -455,7 +477,7 @@
 
   .banner-overlay {
     position: absolute;
-    top: -70px;
+    top: -4.37rem;
     left: 0;
     right: 0;
     bottom: 0;
@@ -463,7 +485,7 @@
     opacity: 0;
     pointer-events: none;
     z-index: 10;
-    transition: background-color 0.5s, opacity 0.5s ease;
+    transition: background-color 0.5s, opacity 0.5s;
   }
 
   .banner-overlay.active {
@@ -511,7 +533,7 @@
     animation-timeline: view();
     animation-range: entry 15% cover 25%;
 
-    @media (width > 999px) {
+    @media (width > 62.43rem) {
       grid-template-columns: 1fr 1fr;
       margin-top: 5rem;
     }
@@ -613,7 +635,9 @@
   }
 
   .cmp-sub-heading--pg1-s6 {
+    position: relative;
     margin-inline: auto;
+    z-index: 999;
   }
 
   .cmp-main-text--pg1-s6 {
@@ -622,12 +646,12 @@
   }
 
   .decorative-side-svg--testimonials {
-    left: -380px;
-    top: -180px;
+    left: -23.75rem;
+    top: -11.25rem;
 
-    @media (width > 1260px) {
-      left: -360px;
-      top: -140px;
+    @media (width > 78.75rem) {
+      left: -22.5rem;
+      top: -8.75rem;
     }
   }
 
@@ -664,7 +688,7 @@
     }
 
     img {
-      width: 310px;
+      width: 19.37rem;
       margin-bottom: 2rem;
     }
 
@@ -672,7 +696,7 @@
       margin-bottom: 2rem;
     }
 
-    @media (width > 760px) {
+    @media (width > 47.5rem) {
       grid-template-columns: 1fr 1fr;
       gap: 4rem;
     }
@@ -758,14 +782,14 @@
 
   .created-by-svg {
     margin-inline: auto;
-    width: 250px;
+    width: 15.62rem;
     height: auto;
     text-shadow: 2px 2px 2px var(--clr-blue-150);
     margin-bottom: 1rem;
 
-    @media (width > 800px) {
+    @media (width > 50rem) {
       position: absolute;
-      top: 55px;
+      top: 3.44rem;
       left: -3%;
       transform: rotate(-10deg);
       transition: transform 0.75s ease-out;
@@ -781,30 +805,30 @@
 
 @layer utilities {
   .wrapper {
-    max-width: calc(1300px + 2rem);
+    max-width: calc(81.25rem + 2rem);
     padding-inline: clamp(1rem, 3.5vw, 2rem);
     margin-inline: auto;
   }
 
   .wrapper--wide {
-    max-width: calc(1400px + 2rem);
+    max-width: calc(87.5rem + 2rem);
   }
 
   .wrapper--mobile-L {
-    @media (width < 1000px) {
-      max-width: calc(570px + 2rem);
+    @media (width < 62.5rem) {
+      max-width: calc(35.62rem + 2rem);
     }
   }
 
   .wrapper--mobile-S {
-    @media (width < 760px) {
-      max-width: calc(570px + 2rem);
+    @media (width < 47.5rem) {
+      max-width: calc(35.62rem + 2rem);
     }
   }
 
   .wrapper--mobile-XS {
-    @media (width < 760px) {
-      max-width: calc(500px + 2rem);
+    @media (width < 47.5rem) {
+      max-width: calc(31.25rem + 2rem);
     }
   }
 
@@ -832,7 +856,7 @@
     position: absolute;
     white-space: nowrap;
     width: 1px;
-    transform: translateY(-80px);
+    transform: translateY(-5rem);
   }
 
   .skip-to-content {
@@ -859,7 +883,7 @@
   @keyframes slideUp {
     from {
       opacity: 0.2;
-      transform: translateY(350px);
+      transform: translateY(21.87rem);
     }
     to {
       opacity: 1;
@@ -872,7 +896,7 @@
       transform: translate(0px, 0px);
     }
     50% {
-      transform: translate(100px, 300px);
+      transform: translate(6.25rem, 18.75rem);
     }
     100% {
       transform: translate(0px, 0px);
@@ -951,10 +975,37 @@
 
   @keyframes autoRun {
     from {
-      transform: perspective(1000px) rotateX(-12deg) rotateY(0deg);
+      transform: perspective(62.5rem) rotateX(-12deg) rotateY(0deg);
     }
     to {
-      transform: perspective(1000px) rotateX(-12deg) rotateY(360deg);
+      transform: perspective(62.5rem) rotateX(-12deg) rotateY(360deg);
+    }
+  }
+
+  @keyframes ufoFly {
+    0% {
+      transform: translateX(-180%) translateY(0);
+    }
+    10% {
+      transform: translateX(0) translateY(6.25rem);
+    }
+    20% {
+      transform: translateX(25vw) translateY(8.12rem);
+    }
+    30% {
+      transform: translateX(50vw) translateY(-12.5rem);
+    }
+    40% {
+      transform: translateX(75vw) translateY(2.5rem);
+    }
+    50% {
+      transform: translateX(100vw) translateY(6.25rem);
+    }
+    60% {
+      transform: translateX(130vw) translateY(0);
+    }
+    100% {
+      transform: translateX(130vw) translateY(0);
     }
   }
 }
