--- a/css/style.css
+++ b/css/style.css
@@ -737,6 +737,11 @@
     }
   }
 
+  .footer-business-logo {
+    width: 100%;
+    height: auto;
+  }
+
   .footer__contact-block {
     li {
       display: flex;
@@ -861,7 +866,7 @@
 
   .skip-to-content {
     position: absolute;
-    color: var(--clr-white);
+    color: #fff;
     font-size: 1.5rem;
     font-weight: 700;
     left: 1rem;
