--- a/css/style-pages.css
+++ b/css/style-pages.css
@@ -89,36 +89,33 @@
   /* \\\\\\\\\\\\\\\\\\\\\\\      *** PAGE 2 / SECTION-TWO / PORTFOLIO ***       \\\\\\\\\\\\\\\\\\\\\\\\ */
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
+  .cmp-topper-heading--pg2-s2::before {
+    position: relative;
+    content: "";
+    display: block;
+    margin-inline: auto;
+    background: var(--clr-gray-100);
+    height: 0px;
+    width: 50%;
+    margin-bottom: 3.5rem;
+    opacity: 0.3;
+    z-index: 999;
+
+    @media (width > 62.5rem) {
+      height: 1px;
+      margin-bottom: 5.5rem;
+      margin-top: -6.5rem;
+    }
+  }
+
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
   /* \\\\\\\\\\\\\\\\\\\\\\\      *** PAGE 2 / SECTION-THREE / TESTIMONIALS ***       \\\\\\\\\\\\\\\\\\\\\\\\ */
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
   .pg1-s6-testimonials--pg2-s3 {
+    position: relative; 
     padding-top: var(--padd-60-100);
-  }
 
-  .cmp-topper-heading--pg2-s3::before {
-    position: absolute;
-    display: block;
-    content: "";
-    height: 1px;
-    width: 35vw;
-    max-width: 55rem;
-    top: -300%;
-    left: 50%;
-    margin-inline: auto;
-    background: var(--clr-gray-100);
-    opacity: 0.3;
-    z-index: 999;
-    transform: translateX(-50%);
-
-    @media (width > 62.5rem) {
-      top: -500%;
-    }
-  }
-
-  .cmp-topper-heading--pg2-s3 {
-    margin-top: 10rem;
   }
 
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
@@ -152,7 +149,7 @@
     font-size: 1.5rem;
     margin-top: 2rem;
     margin-bottom: 1.2rem;
-    padding-bottom: .25rem;
+    padding-bottom: 0.25rem;
     line-height: 1.4em;
     text-decoration: underline;
     text-decoration-color: var(--clr-blue-100);
