--- a/css/style.css
+++ b/css/style.css
@@ -411,13 +411,19 @@
       .slider {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(18.75rem, 1fr));
+        gap: 1.5rem;
       }
 
-      a {
+      img {
         display: inline-block;
-        width: 50%;
+        width: 100%;
+        height: auto;
         margin-top: 4rem;
-        margin-bottom: 4rem;
+        margin-bottom: 1rem;
+
+        @media (width > 62.5rem) {
+          margin-bottom: 6rem;
+        }
       }
 
       .banner-overlay {
@@ -478,6 +484,7 @@
   .banner-overlay {
     position: absolute;
     top: -4.37rem;
+    max-height: 37.5rem;
     left: 0;
     right: 0;
     bottom: 0;
@@ -493,12 +500,30 @@
     pointer-events: auto;
   }
 
+  .portfolio-images {
+    border-radius: 1rem;
+  }
+
+  .cmp-topper-heading--pg1-s4 {
+
+    font-size: clamp(0.75rem, 2vw, 1.75rem);
+    bottom: -30px;
+
+    @media (width > 62.5rem) {
+      bottom: 20px;
+    }
+  }
+
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
   /* \\\\\\\\\\\\\\\\\\\\\\\      *** PAGE 1 / SECTION-FIVE / PRICING ***       \\\\\\\\\\\\\\\\\\\\\ */
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
   .pg1-s5-pricing {
-    padding-bottom: var(--padd-60-100);
+    padding-block: var(--padd-60-100);
+
+    @media (width > 62.5rem) {
+      padding-top: 0;
+    }
   }
 
   .cmp-topper-heading--pg1-s5::before {
@@ -507,11 +532,15 @@
     display: block;
     margin-inline: auto;
     background: var(--clr-gray-100);
-    height: 1px;
-    width: 60%;
-    margin-bottom: clamp(3.75rem, 8vw, 6.25rem);
+    height: 0px;
+    width: 50%;
+    margin-bottom: 3.5rem;
     opacity: 0.3;
-    z-index: 999;
+
+    @media (width > 62.5rem) {
+      height: 1px;
+      margin-bottom: 5.5rem;
+    }
   }
 
   .cmp-topper-heading--pg1-s5,
@@ -521,7 +550,6 @@
     text-align: center;
     margin-inline: auto;
     margin-bottom: 0;
-    z-index: 999;
   }
 
   .pricing-card-container {
