--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -10,7 +10,7 @@
 html.dark-mode body,
 html.dark-mode .pg1-s3-performance {
   background-color: var(--clr-dark-theme-400);
-  transition: background-color 0.5s;
+  transition: background-color .5s;
 }
 
 html.dark-mode p,
@@ -65,7 +65,7 @@ html.dark-mode .header__container,
 html.dark-mode .nav-bar,
 html.dark-mode .pg1-s5-pricing--pg4-s1 {
   background-color: var(--clr-dark-theme-400);
-  transition: transform 3s ease-in background-color 0.5s;
+  transition: transform 0.6s ease-in background-color 0.5s;
 }
 
 html.dark-mode .pg1-s2-mission {
